empezo integracion info portafolio

--- a/src/components/navbar/navbar.component.html
+++ b/src/components/navbar/navbar.component.html
@@ -1,8 +1,21 @@
-<ul>
-    <li><a routerLink="/inicio">Inicio</a></li>
-    <li><a routerLink="/sobre-mi">Sobre Mi</a></li>
-    <li><a routerLink="/proyectos">Proyectos</a></li>
-    <li><a routerLink="/contacto">Contacto</a></li>
-  </ul>
-  
+
+<nav class="navbar navbar-expand-lg navbar-dark nav">
+  <div class="container">
+      <a routerLink="inicio" class="navbar-brand">Najwa El Qortobi</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+              <li class="nav-item"><a routerLink="sobre-mi"  class="nav-link">Sobre Mí</a></li>
+              <li class="nav-item"><a routerLink="proyectos" class="nav-link">Proyectos</a></li>
+              <li class="nav-item"><a routerLink="Contacto" class="nav-link">Contacto</a></li>
+          </ul>
+      </div>
+  </div>
+</nav> 
   <router-outlet></router-outlet>
+
+
+
+
