--- a/src/components/navbar/navbar.component.html
+++ b/src/components/navbar/navbar.component.html
@@ -9,7 +9,7 @@
           <ul class="navbar-nav ms-auto">
               <li class="nav-item"><a routerLink="sobre-mi"  class="nav-link">Sobre Mí</a></li>
               <li class="nav-item"><a routerLink="proyectos" class="nav-link">Proyectos</a></li>
-              <li class="nav-item"><a routerLink="Contacto" class="nav-link">Contacto</a></li>
+              <li class="nav-item"><a routerLink="contacto" class="nav-link">Contacto</a></li>
           </ul>
       </div>
   </div>
