background body agregados y rutas del nav y footer funcionando

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,7 @@
-/* body {
-    background-image: url(../assets/Background-img.jpg);
+body {
+    background-image: url(assets/images/Background-img.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-} */
+    width: 100%;
+} 
