--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
+<body>
 <header>
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
 </header>
-
-
 <footer>
   <app-footer></app-footer>
 </footer>
+</body>
