--- a/src/components/footer/footer.component.html
+++ b/src/components/footer/footer.component.html
@@ -1,1 +1,19 @@
-<p>footer works!</p>
+<footer class="footer text-white text-center py-2">
+    <!--py : padding top+bottom--->
+    <div class="container">
+        <p>&copy; 2024 Najwa El Qortobi. Todos los derechos reservados</p>
+        <ul class="list-inline"> 
+            <!--para que los li sean en la misma linea en vez de uno abajo del otro
+            list-inline-item va junto con list-inline para que todo los li dentro de ul 
+            se comportan como elemento de linea uno cerca del otro-->
+            <li class="list-inline-item"><a routerLink="sobre-mi" class="text-white">Sobre Mí</a></li>
+            <li class="list-inline-item"><a routerLink="proyectos" class="text-white">Proyectos</a></li>
+            <li class="list-inline-item"><a routerLink="contacto" class="text-white">Contacto</a></li>
+        </ul>
+        <div>
+            <a href="https://www.linkedin.com/in/najwa-el-qortobi" target="_blank" class="text-white me-3">LinkedIn</a>
+            <!--me es margin end-->
+            <a href="https://github.com/Najwaelqortobi" target="_blank" class="text-white">GitHub</a>
+        </div>
+    </div>
+</footer>
