--- a/src/components/sobre-mi/sobre-mi.component.html
+++ b/src/components/sobre-mi/sobre-mi.component.html
@@ -1,1 +1,42 @@
-<p>sobre-mi works!</p>
+<body>
+<div class="container p-4">
+    <div class="d-flex flex-column gap-4 align-items-center">
+        
+        <!-- Hard Skills -->
+        <div class="card-body card shadow pb-1">
+            <h5 class="card-title ">Hard Skills</h5>
+            <ul class="list-unstyled">
+                <li>Front-end: HTML5, CSS, JavaScript</li>
+                <li>Back-end: Java, Procesamiento de datos</li>
+                <li>Bases de datos: SQL</li>
+                <li>Control de versiones: GitHub</li>
+                <li>Metodologías: Scrum</li>
+            </ul>
+        </div>
+
+        <!-- Soft Skills -->
+        <div class="card-body card shadow pb-1">
+            <h5 class="card-title">Soft Skills</h5>
+            <ul class="list-unstyled">
+                <li>Capacidad analítica</li>
+                <li>Capacidad de liderazgo</li>
+                <li>Comunicación efectiva</li>
+                <li>Capacidad de adaptación e integración</li>
+            </ul>
+        </div>
+        
+
+        <!-- Formación -->
+        <div class="card-body card shadow pb-4 pt-3">
+            <h5 class="card-title">Formación</h5>
+            <p class="card-text text-justify">Mi trayectoria incluye un bootcamp intensivo en Desarrollo Web, donde adquirí habilidades en front-end y back-end. He complementado esta formación con módulos especializados en procesamiento de datos con Java y desarrollo de aplicaciones web.</p>
+        </div>
+
+        <!-- Objetivos -->
+        <div class="card-body card shadow">
+            <h5 class="card-title ">Objetivos</h5>
+            <p class="card-text text-justify">Estoy constantemente actualizando mis habilidades para mantenerme al día con las últimas tecnologías y tendencias en desarrollo web. Mi objetivo es contribuir a proyectos desafiantes que me permitan crecer profesionalmente y aportar valor a través de soluciones tecnológicas innovadoras.</p>
+        </div>
+    </div>
+</div>
+</body>
