pagina proyectos lista

--- a/src/components/proyectos/proyectos.component.html
+++ b/src/components/proyectos/proyectos.component.html
@@ -1,1 +1,131 @@
-<p>proyectos works!</p>
+<section id="proyectos" class="py-5">
+    <div class="container">
+
+        <!-- Proyecto 1 -->
+        <div class="row mb-5"> <!-- Fila para el Proyecto 1 -->
+            <div class="col-md-7"> <!-- Columna para el carrusel -->
+                <div id="carouselProject1" class="carousel slide" data-bs-ride="carousel" style="max-width: 400px; margin: auto;">
+                    <div class="carousel-inner rounded-3">
+                        <div class="carousel-item active size-1">
+                            <img src="/images/bisuteria1.png" alt="Tienda Bisuteria" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item fixed-height size-2">
+                            <img src="/images/bisuteria2.png" alt="Landing Bootstrap" class="d-block w-100">
+                        </div>
+                       
+                        <div class="carousel-item fixed-height size">
+                            <img src="/images/codigo2-bisuteria.png" alt="Proyecto Bisuteria" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item fixed-height size-4">
+                            <img src="/images/bisuteria3.png" alt="proyecto Biuteria" class="d-block w-100">
+                        </div>
+                      
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselProject1" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselProject1" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+            <div class="col-md-5 d-flex flex-column justify-content-center contenido-descripcion"> <!-- Columna para la descripción -->
+                <h5 class="title">Proyecto Bisuteria</h5>
+                <p class="txt"> Este proyecto es una aplicación web para una tienda de bisutería que ofrece una experiencia de compra personalizada y multilingüe, diseñada para mostrar y vender una variedad de accesorios con un sistema de pedidos y autenticación de usuarios. Destaca su funcionalidad multilingüe, con soporte para español, euskera, inglés y francés, permitiendo a los clientes explorar productos y gestionar sus compras de manera intuitiva.</p>
+                <p class="txt"> Desarrollado utilizando tecnologías web fundamentales como CSS3, HTML5 y JavaScript, el proyecto demuestra habilidades en desarrollo frontend, diseño responsive e integración de sistemas de comercio electrónico.</p>
+
+                <div class="d-flex justify-content-center">
+                    <a href="https://bisuteria-unica.netlify.app/" class="me-2 btn-proyecto mb-5">Ver Proyecto</a>
+                    <a href="https://github.com/Najwaelqortobi/Proyecto_bisuteria.git" class="btn-codigo mb-5">Ver Código</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Proyecto 2 -->
+        <div class="row mb-5"> <!-- Fila para el Proyecto 1 -->
+            <div class="col-md-7"> <!-- Columna para el carrusel -->
+                <div id="carouselProject2" class="carousel slide" data-bs-ride="carousel" style="max-width: 400px; margin: auto;">
+                    <div class="carousel-inner rounded-3">
+                        <div class="carousel-item active fixed-height">
+                            <img src="/images/Arco-1.png" alt="Proyecto Arco" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item fixed-height">
+                            <img src="/images/Arco-2.png" alt="Proyecto Arco" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item fixed-height">
+                            <img src="/images/Arco-3.png" alt="Proyecto Arco" class="d-block w-100">
+                        </div>
+                    </div>
+
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselProject2" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselProject2" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+            <div class="col-md-5 d-flex flex-column justify-content-center contenido-descripcion"> <!-- Columna para la descripción -->
+                <h5 class="title">Proyecto Arco</h5>
+                <p class="txt">Este proyecto tiene como objetivo proporcionar al Club Orion Getxo una plataforma digital para mostrar sus actividades y mantener informados a los interesados sobre los programas disponibles. Este proyecto se ha realizado usando lenguajes de programación HTML5 y CSS3
+                </p>
+                <div class="d-flex justify-content-center mt-3">
+                    <a href="https://proyecto-arco.netlify.app/" class="me-2 btn-proyecto">Ver Proyecto</a>
+                    <a href="https://github.com/Najwaelqortobi/Proyecto_Arco.git" class="btn-codigo">Ver Código</a>
+                </div>
+            </div>
+        </div>
+
+           <!-- Proyecto 3 -->
+           <div class="row mb-5"> <!-- Fila para el Proyecto 1 -->
+            <div class="col-md-7"> <!-- Columna para el carrusel -->
+                <div id="carouselProject3" class="carousel slide" data-bs-ride="carousel" style="max-width: 400px; margin: auto;">
+                    <div class="carousel-inner rounded-3">
+                        <div class="carousel-item active fixed-height">
+                            <img src="/images/Parseo_Casteo.png" alt="Parseo y Casteo" class="d-block w-100">
+                        </div>
+                     
+                        <div class="carousel-item fixed-height">
+                            <img src="/images/parse-Casteo-codigo.png" alt="Parseo y Casteo" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item fixed-height">
+                            <img src="/images/Parseo-Casteo-1.png" alt="Parseo y Casteo" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item fixed-height">
+                            <img src="/images/casteo-parseo-4.png" alt="Parseo y Casteo" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item fixed-height">
+                            <img src="/images/casteo-parseo-5.png" alt="Parseo y Casteo" class="d-block w-100">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselProject3" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselProject3" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+            <div class="col-md-5 d-flex flex-column justify-content-center contenido-descripcion"> <!-- Columna para la descripción -->
+                <h5 class="title">Parseo y Casteo</h5>
+                <p class="txt">Este proyecto se centra en la implementación de conceptos fundamentales de programación en Javascript, específicamente en el uso de parseo y casteo. La aplicación incluye herramientas prácticas como:  </p>
+                    <p class="txt">Calculadora de Préstamos: Esta herramienta permite a los usuarios calcular los pagos mensuales de un préstamo.
+                       <p class="txt"> Generador de Personas: Esta aplicación genera perfiles aleatorios de personas, incluyendo atributos como nombre, edad y ocupación.</p>
+                <div class="d-flex justify-content-center mt-3">
+                    <a href="https://parseo-casteo.netlify.app/" class="me-2 btn-proyecto">Ver Proyecto</a>
+                    <a href="https://github.com/Najwaelqortobi/parseo_casteo.git" class="btn-codigo">Ver Código</a>
+                </div>
+            </div>
+        </div>
+
+
+
+    </div>
+
+</section>
