portafolio v angular listo

--- a/src/components/inicio/inicio.component.html
+++ b/src/components/inicio/inicio.component.html
@@ -15,7 +15,8 @@
                     <p class="lead descripcion mx-auto"> Durante mis estudios, he participado en proyectos desafiantes que han puesto a prueba mis habilidades técnicas y mi capacidad para colaborar eficazmente en equipo. Estoy comprometida con el aprendizaje continuo y la adaptación a nuevas tecnologías, lo que me permite mantenerme a la punta de un campo en constante evolución. Estoy entusiasmada por seguir creciendo como profesional y enfrentar nuevos retos en esta apasionante industria.</p>
                        
                     <div class="button">
-                        <a routerLink="contacto">Contáctame</a>
+                        <a routerLink="/contacto">Contáctame</a> <!--puse ruta absoluta es decir una ruta con barra porque no me funcionaba con 
+                    la ruta relativa que es contacto sin barra-->
                     </div>
                 </div>
             </div>
